--- a/BeauitySaloonWeb/BeauitySaloonWeb.csproj
+++ b/BeauitySaloonWeb/BeauitySaloonWeb.csproj
@@ -196,6 +196,10 @@
     <Compile Include="Models\ViewModel\Accounts\AccountViewModels.cs" />
     <Compile Include="Models\ViewModel\Appointments\AppointmentInputModel.cs" />
     <Compile Include="Models\ViewModel\Appointments\AppointmentRatingViewModel.cs" />
+    <Compile Include="Models\ViewModel\Appointments\AppointmentsListViewModel.cs" />
+    <Compile Include="Models\ViewModel\Appointments\AppointmentViewModel.cs" />
+    <Compile Include="Models\ViewModel\Home\IndexCategoryViewModel.cs" />
+    <Compile Include="Models\ViewModel\Home\IndexViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
