--- a/BeauitySaloonWeb/Web.config
+++ b/BeauitySaloonWeb/Web.config
@@ -9,13 +9,15 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=sadeedsqldb.database.windows.net;Initial Catalog=BeauitySaloonWeb;User ID=sauser;Password=SadeedUsman123;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=ISBLT-9248; Initial Catalog=BeauitySaloonWeb; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=sadeedsqldb.database.windows.net;Initial Catalog=BeauitySaloonWeb;User ID=sauser;Password=SadeedUsman123;Trusted_Connection=False;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="owin:AutomaticAppStartup" value="false" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -78,8 +80,12 @@
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
+        <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
