--- a/BeauitySaloonWeb/Web.config
+++ b/BeauitySaloonWeb/Web.config
@@ -13,6 +13,7 @@
     <!--<add name="DefaultConnection" connectionString="Data Source=sadeedsqldb.database.windows.net;Initial Catalog=BeauitySaloonWeb;User ID=sauser;Password=SadeedUsman123;Trusted_Connection=False;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
+	  <add key="Password" value="123456"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
