Revert "Updating Cancel Appointment Method"
This reverts commit b672e3ab0657f7b3c38622ddcd6f64bf9b96dad7.

--- a/BeauitySaloonWeb/Web.config
+++ b/BeauitySaloonWeb/Web.config
@@ -13,7 +13,7 @@
     <compilation debug="true" targetFramework="4.7.2" />
   </system.web>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-P0JTJ28; Initial Catalog=BeauitySaloonWeb; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=ISBLT-9248; Initial Catalog=BeauitySaloonWeb; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
     <!--<add name="DefaultConnection" connectionString="Data Source=sadeedsqldb.database.windows.net;Initial Catalog=BeauitySaloonWeb;User ID=sauser;Password=SadeedUsman123;Trusted_Connection=False;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
